--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@prisma/client": "^5.15.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2"
@@ -29,6 +30,7 @@
     "husky": "^9.0.11",
     "nodemon": "^3.1.3",
     "prettier": "3.3.2",
+    "prisma": "^5.15.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.5"
   }
