--- a/package.json
+++ b/package.json
@@ -1,37 +1,45 @@
 {
-  "name": "elucide-sports-backend",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "type": "module",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "npm run format:check && tsc",
-    "start": "npm run format:check && tsc && node dist/index.js",
-    "dev": "nodemon --exec node --loader ts-node/esm src/index.ts",
-    "format:fix": "prettier --write \"**/*.{ts,tsx,json}\"",
-    "format:check": "prettier --check \"**/*.{ts,tsx,json}\"",
-    "prepare": "husky"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "@prisma/client": "^5.15.1",
-    "cors": "^2.8.5",
-    "dotenv": "^16.4.5",
-    "express": "^4.19.2"
-  },
-  "devDependencies": {
-    "@types/cors": "^2.8.17",
-    "@types/dotenv": "^8.2.0",
-    "@types/express": "^4.17.21",
-    "@types/node": "^20.14.2",
-    "husky": "^9.0.11",
-    "nodemon": "^3.1.3",
-    "prettier": "3.3.2",
-    "prisma": "^5.15.1",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.4.5"
-  }
+    "name": "elucide-sports-backend",
+    "version": "1.0.0",
+    "description": "",
+    "main": "index.js",
+    "type": "module",
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "build": "npm run format:check && tsc",
+        "start": "npm run format:check && tsc && node dist/index.js",
+        "dev": "nodemon --exec node --loader ts-node/esm src/index.ts",
+        "format:fix": "prettier --write \"**/*.{ts,tsx,json}\"",
+        "format:check": "prettier --check \"**/*.{ts,tsx,json}\"",
+        "prepare": "husky"
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "dependencies": {
+        "@prisma/client": "^5.15.1",
+        "bcrypt": "^5.1.1",
+        "cookie-parser": "^1.4.6",
+        "cors": "^2.8.5",
+        "dotenv": "^16.4.5",
+        "express": "^4.19.2",
+        "express-async-handler": "^1.2.0",
+        "jsonwebtoken": "^9.0.2",
+        "zod": "^3.23.8"
+    },
+    "devDependencies": {
+        "@types/bcrypt": "^5.0.2",
+        "@types/cookie-parser": "^1.4.7",
+        "@types/cors": "^2.8.17",
+        "@types/dotenv": "^8.2.0",
+        "@types/express": "^4.17.21",
+        "@types/jsonwebtoken": "^9.0.6",
+        "@types/node": "^20.14.2",
+        "husky": "^9.0.11",
+        "nodemon": "^3.1.3",
+        "prettier": "3.3.2",
+        "prisma": "^5.15.1",
+        "ts-node": "^10.9.2",
+        "typescript": "^5.4.5"
+    }
 }
