--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "elucide-sports-backend",
     "version": "1.0.0",
     "description": "",
-    "main": "index.js",
+    "main": "dist/index.js",
     "type": "module",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
