--- a/package.json
+++ b/package.json
@@ -2,12 +2,12 @@
     "name": "elucide-sports-backend",
     "version": "1.0.0",
     "description": "",
-    "main": "dist/index.js",
+    "main": "index.js",
     "type": "module",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
-        "build": "npm run format:check && tsc",
-        "start": "npm run format:check && tsc && node dist/index.js",
+        "build": "npm run format:fix && tsc",
+        "start": "npm run format:fix && tsc && node dist/index.js",
         "dev": "nodemon --exec node --loader ts-node/esm src/index.ts",
         "format:fix": "prettier --write \"**/*.{ts,tsx,json}\"",
         "format:check": "prettier --check \"**/*.{ts,tsx,json}\"",
