--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
         "build": "npm run format:fix && tsc",
-        "start": "npm run format:fix && tsc && node ./dist/index.js",
+        "start": "npm run format:fix && node dist/index.js",
         "dev": "nodemon --exec node --loader ts-node/esm src/index.ts",
         "format:fix": "prettier --write \"**/*.{ts,tsx,json}\"",
         "format:check": "prettier --check \"**/*.{ts,tsx,json}\"",
