fix: vercel deployment by making 'transpileOnly' to true in tsconfig.json

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,5 +10,8 @@
         "strict": true,
         "skipLibCheck": true
     },
+    "ts-node": {
+        "transpileOnly": true
+    },
     "include": ["src/**/*"]
 }
