--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,3 @@
 PORT=3000
-AUTHORIZED_DOMAINS="http://localhost:3000,http://192.168.0.8:3000"
+AUTHORIZED_DOMAINS="http://localhost:3000,http://192.168.0.8:3000,http://localhost:5173"
 DATABASE_URL="postgresql://username:password.host/database?sslmode=require"
