--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,10 @@
 {
     "version": 2,
     "builds": [{ "src": "./src/index.ts", "use": "@vercel/node" }],
-    "routes": [{ "src": "/(.*)", "dest": "/src" }]
+    "routes": [{ "src": "/(.*)", "dest": "/src" }],
+    "functions": {
+        "src/**/*.ts": {
+            "timeout": 30
+        }
+    }
 }
