--- a/vercel.json
+++ b/vercel.json
@@ -3,8 +3,8 @@
     "builds": [{ "src": "./src/index.ts", "use": "@vercel/node" }],
     "routes": [{ "src": "/(.*)", "dest": "/src" }],
     "functions": {
-        "src/**/*.ts": {
-            "maxDuration": 50
+        "api/**/*.ts": {
+            "maxDuration": 30
         }
     }
 }
