--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,8 @@
 {
     "version": 2,
-    "builds": [{ "src": "./src/index.ts", "use": "@vercel/node" }],
-    "routes": [{ "src": "/(.*)", "dest": "/src" }],
     "functions": {
         "api/**/*.ts": {
+            "runtime": "@vercel/node",
             "maxDuration": 30
         }
     }
