--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {
     "version": 2,
     "functions": {
-        "api/**/*.ts": {
+        "src/**/*.ts": {
             "runtime": "@vercel/node",
             "maxDuration": 30
         }
