--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
     "$schema": "https://openapi.vercel.sh/vercel.json",
     "version": 2,
     "functions": {
-        "/src/**/*.ts": {
+        "src/**/*.ts": {
             "maxDuration": 60,
             "includeFiles": "/src/**/*.ts"
         }
