--- a/vercel.json
+++ b/vercel.json
@@ -2,9 +2,9 @@
     "$schema": "https://openapi.vercel.sh/vercel.json",
     "version": 2,
     "functions": {
-        "src/**/*.ts": {
-            "maxDuration": 60
+        "src/index.ts": {
+            "maxDuration": 30
         }
     },
-    "rewrites": [{ "source": "/src", "destination": "/api" }]
+    "routes": [{ "src": "/(.*)", "dest": "/src/index.ts" }]
 }
