--- a/vercel.json
+++ b/vercel.json
@@ -2,9 +2,8 @@
     "$schema": "https://openapi.vercel.sh/vercel.json",
     "version": 2,
     "functions": {
-        "src/index.ts": {
-            "maxDuration": 30
+        "src/**/*.ts": {
+            "maxDuration": 60
         }
-    },
-    "routes": [{ "src": "/(.*)", "dest": "/src/index.ts" }]
+    }
 }
