--- a/vercel.json
+++ b/vercel.json
@@ -3,7 +3,8 @@
     "version": 2,
     "functions": {
         "api/**/*.ts": {
-            "maxDuration": 60
+            "maxDuration": 60,
+            "runtime": "nodejs"
         }
     }
 }
