--- a/vercel.json
+++ b/vercel.json
@@ -3,8 +3,7 @@
     "version": 2,
     "functions": {
         "api/**/*.ts": {
-            "maxDuration": 60,
-            "runtime": "nodejs@20.11.0"
+            "maxDuration": 60
         }
     }
 }
