fix: reverted to old vercel config

--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,5 @@
 {
-    "$schema": "https://openapi.vercel.sh/vercel.json",
     "version": 2,
-    "functions": {
-        "api/**/*.ts": {
-            "maxDuration": 60
-        }
-    }
+    "builds": [{ "src": "./src/index.ts", "use": "@vercel/node" }],
+    "routes": { "src": "/(.*)", "dest": "/src" }
 }
