--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,9 @@
 {
+    "$schema": "https://openapi.vercel.sh/vercel.json",
     "version": 2,
-    "builds": [{ "src": "./src/index.ts", "use": "@vercel/node" }],
-    "routes": [{ "src": "/(.*)", "dest": "/src" }]
+    "functions": {
+        "api/**/*.ts": {
+            "maxDuration": 60
+        }
+    }
 }
