--- a/vercel.json
+++ b/vercel.json
@@ -5,5 +5,6 @@
         "api/**/*.ts": {
             "maxDuration": 60
         }
-    }
+    },
+    "rewrites": [{ "source": "/(.*)", "destination": "/src" }]
 }
