--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,10 @@
 {
     "$schema": "https://openapi.vercel.sh/vercel.json",
     "version": 2,
+    "rewrites": [{ "source": "/(.*)", "destination": "/src" }],
     "functions": {
         "src/**/*.ts": {
             "maxDuration": 60
         }
-    },
-    "rewrites": [{ "source": "/(.*)", "destination": "/src" }]
+    }
 }
