--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,5 @@
 {
-    "$schema": "https://openapi.vercel.sh/vercel.json",
     "version": 2,
-    "rewrites": [{ "source": "/(.*)", "destination": "/src" }],
-    "functions": {
-        "src/**/*.ts": {
-            "maxDuration": 60
-        }
-    }
+    "builds": [{ "src": "./src/index.ts", "use": "@vercel/node" }],
+    "routes": [{ "src": "/(.*)", "dest": "/src" }]
 }
