--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 PORT=3000
-NODE_ENV=
+NODE_ENV=development
 AUTHORIZED_DOMAINS="http://localhost:3000,http://192.168.0.8:3000,http://localhost:5173"
 DATABASE_URL="postgresql://username:password.host/database?sslmode=require"
 ACCESS_TOKEN_SECRET=
