--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,22 +7,22 @@ on:
 
 jobs:
     deploy:
-        runs-on: ubuntu-lastest
+        runs-on: ubuntu-latest
 
         steps:
             - name: Checkout code
               uses: actions/checkout@v2
 
-            - name: Copy via SSH and deploy
-              uses: appleboy/ssh-action@master
+            - name: Copy via SSH and run deploy script
+              uses: appleboy/ssh-action@v0.1.6
               with:
-                  host: ${{  secrets.EC2_HOST  }}
-                  username: ${{  secrets.EC2_USER  }}
-                  key: ${{  secrets.EC2_SECRET  }}
+                  host: ${{ secrets.EC2_HOST }}
+                  username: ${{ secrets.EC2_USER }}
+                  key: ${{ secrets.EC2_SECRET }}
                   script: |
-                      cd elucide-sports-backend
+                      cd elucide-sports-backend/
                       git pull origin main
                       npm install
                       npm run build
-                      pm2 restart ELUCIDE --update-env
+                      pm2 restart Elucide --update-env
                       pm2 save
