--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "type": "module",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
-        "build": "npm run format:fix && node --max-old-space-size=4096 node_modules/.bin/tsc",
-        "start": "npm run format:fix && node dist/index.js",
+        "build": "node --max-old-space-size=1024 node_modules/.bin/tsc",
+        "start": "node dist/index.js",
         "dev": "nodemon --exec node --loader ts-node/esm src/index.ts",
         "format:fix": "prettier --write \"**/*.{ts,tsx,json}\"",
         "format:check": "prettier --check \"**/*.{ts,tsx,json}\"",
