build: updated deploy.yml
Updated deploy.yml config to reset all local changes and force pull the
latest commit from main branch and added command to remove dist before
building

We ideally do not want any change to be made directly on the server and
for those changes to affect the ci/cd pipelines. Therefore I have added
commands to deploy.yml to reset all local changes on the server and
force pull the latest commit.

Also added a command to remove the previous dist folder before building
the new one to avoid any unintended errors.

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,8 +21,10 @@ jobs:
                   key: ${{ secrets.EC2_SECRET }}
                   script: |
                       cd elucide-sports-backend/
-                      git pull origin main
+                      git restore .
+                      git pull origin main --force
                       npm install
+                      rm -rf dist/
                       npm run build
                       pm2 restart Elucide --update-env
                       pm2 save
