fix(deploy): deploy.yml config
Fixed deploy.yml config to work as intended by the previous commit by
reseting the local branch to the reflect the remote brand HEAD instead
of trying to force pull

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,8 +21,8 @@ jobs:
                   key: ${{ secrets.EC2_SECRET }}
                   script: |
                       cd elucide-sports-backend/
-                      git restore .
-                      git pull origin main --force
+                      git fetch origin main
+                      git reset --hard origin/main
                       npm install
                       rm -rf dist/
                       npm run build
