--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
         "format:fix": "prettier --write \"**/*.{ts,tsx,json}\"",
         "format:check": "prettier --check \"**/*.{ts,tsx,json}\"",
         "prepare": "husky",
-        "postinstall": "prisma generate"
+        "postinstall": "npx prisma generate"
     },
     "keywords": [],
     "author": "",
