--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,7 @@
 PORT=3000
 NODE_ENV=development
 AUTHORIZED_DOMAINS="http://localhost:3000,http://192.168.0.8:3000,http://localhost:5173"
+PROD_DATABASE_URL="postgresql://username:password.host/prod-database?sslmode=require"
 DATABASE_URL="postgresql://username:password.host/database?sslmode=require"
 ACCESS_TOKEN_SECRET=
 REFRESH_TOKEN_SECRET=
